--- a/assets/add.css
+++ b/assets/add.css
@@ -127,6 +127,10 @@ picture {
   opacity: 1;
 }
 
+.c-modal {
+  top: 0 !important;
+}
+
 #opening-wrapper.js-none {
   display: none !important;
 }
