--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -316,6 +316,67 @@
       <li id="a11y-new-window-message">{{ 'accessibility.link_messages.new_window' | t }}</li>
     </ul>
 
+    <!-- modal-03 -->
+    <div id="modal-03" class="c-modal js-modal">
+      <div class="c-modal_bg js-modal-close"></div>
+      <div class="js-can-scroll c-modal_content _lg">
+        <div class="c-modal_content_inner">
+          <img src="{{ 'mark.png' | file_url }}" alt="" class="mark">
+          <h3>あなたは、20歳以上ですか？</h3>
+          <ul class="d-flex justify-content-center">
+            <li class="yes_btn">
+              <!-- <a href="https://awichmerch.thebase.in/items/69187993" class="en"> -->
+              <a href="/products/habush" class="en">
+                <picture class="">
+                  <source srcset="{{ 'yes_btn.svg' | file_url }}" media="(min-width: 768px)">
+                  <img src="{{ 'yes_btn_sp.svg' | file_url }}" alt="Yes">
+                </picture>
+              </a>
+            </li>
+            <li class="no_btn en">
+              <a href="https://google.com" class="en">
+                <picture class="">
+                  <source srcset="{{ 'no_btn.svg' | file_url }}" media="(min-width: 768px)">
+                  <img src="{{ 'no_btn_sp.svg' | file_url }}" alt="No">
+                </picture>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- /modal-03 -->
+    <!-- modal-04 -->
+    <div id="modal-04" class="c-modal js-modal">
+      <div class="c-modal_bg js-modal-close"></div>
+      <div class="js-can-scroll c-modal_content _lg">
+        <div class="c-modal_content_inner">
+          <img src="{{ 'mark.png' | file_url }}" alt="" class="mark">
+          <h3>あなたは、20歳以上ですか？</h3>
+          <ul class="d-flex justify-content-center">
+            <li class="yes_btn">
+              <!-- <a href="https://awichmerch.thebase.in/items/69187993" class="en"> -->
+              <a href="/products/habush-limited" class="en">
+                <picture class="">
+                  <source srcset="{{ 'yes_btn.svg' | file_url }}" media="(min-width: 768px)">
+                  <img src="{{ 'yes_btn_sp.svg' | file_url }}" alt="Yes">
+                </picture>
+              </a>
+            </li>
+            <li class="no_btn en">
+              <a href="https://google.com" class="en">
+                <picture class="">
+                  <source srcset="{{ 'no_btn.svg' | file_url }}" media="(min-width: 768px)">
+                  <img src="{{ 'no_btn_sp.svg' | file_url }}" alt="No">
+                </picture>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- /modal-04 -->
+
     {% if template == 'page.recipe' %}
     <ul class="underRecipe__swiper-thumb-wrap">
       <li class="underRecipe__swiper-thumb is-active" data-slide="0">
