--- a/assets/add.scss
+++ b/assets/add.scss
@@ -19,6 +19,13 @@ $breakpoints: (
     共通パーツ
 -----------------------------------*/
 
+.preload-main {
+    opacity: 0;
+    &.js-none {
+        opacity: 1;
+    }
+}
+
 .header__icon, .header__icon--cart .icon {
     width: 6rem;
     height: 6rem;
