--- a/assets/add.css
+++ b/assets/add.css
@@ -2,6 +2,15 @@
 /*----------------------------------
     共通パーツ
 -----------------------------------*/
+.cart__warnings {
+  padding: 80px 0 180px !important;
+}
+@media screen and (max-width: 768px) {
+  .cart__warnings {
+    padding: 3rem 0 10rem !important;
+  }
+}
+
 .preload-main {
   opacity: 0;
 }
@@ -38,6 +47,19 @@
 
 header .sns-icons {
   margin-top: 0;
+  position: fixed;
+  z-index: 100;
+  right: 130px;
+  mix-blend-mode: difference;
+}
+@media screen and (max-width: 768px) {
+  header .sns-icons {
+    right: 80px;
+  }
+}
+
+header .header-text-wrap {
+  margin-right: 100px;
 }
 
 @media (min-width: 769px) {
@@ -60,12 +82,22 @@ header .sns-icons {
 }
 
 .follow_btn {
-  background-image: url(../images/cta-new.png);
+  background-image: url(/assets/cta.png);
+}
+@media screen and (max-width: 768px) {
+  .follow_btn {
+    background-image: url(/assets/cta_sp.png);
+  }
 }
 
 .follow_btn:hover {
-  background-image: url(../images/cta-new.png);
+  background-image: url(/assets/cta.png);
   opacity: 0.7;
+}
+@media screen and (max-width: 768px) {
+  .follow_btn:hover {
+    background-image: url(/assets/cta_sp.png);
+  }
 }
 
 @media (min-width: 769px) {
@@ -183,6 +215,82 @@ picture {
 /*----------------------------------
     Top Product
 -----------------------------------*/
+.purchase_btn {
+  -webkit-clip-path: polygon(92.8% 0, 100% 33%, 100% 100%, 0 100%, 0 0);
+          clip-path: polygon(92.8% 0, 100% 33%, 100% 100%, 0 100%, 0 0);
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  height: 50px;
+  background: #fff;
+}
+.purchase_btn span {
+  transition: all 0.3s ease;
+  position: relative;
+  z-index: 2;
+}
+.purchase_btn::after {
+  position: absolute;
+  z-index: 1;
+  content: "";
+  left: 1px;
+  top: 1px;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  background: #272727;
+  -webkit-clip-path: polygon(92.8% 0, 100% 33%, 100% 100%, 0 100%, 0 0);
+          clip-path: polygon(92.8% 0, 100% 33%, 100% 100%, 0 100%, 0 0);
+  opacity: 0;
+  transition: all 0.3s ease;
+  overflow: hidden;
+}
+@media (hover: hover) {
+  .purchase_btn:hover span {
+    color: #fff;
+  }
+  .purchase_btn:hover::after {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .purchase_btn {
+    font-size: 1.4rem !important;
+  }
+}
+#product .info .memo-main, #product2 .info .memo-main {
+  line-height: 1.7142857143;
+  font-size: 14px;
+  margin-bottom: 45px;
+}
+@media screen and (max-width: 768px) {
+  #product .info .memo-main, #product2 .info .memo-main {
+    line-height: 2.1538461538;
+    font-size: 1.3rem;
+    margin-bottom: 3.6rem;
+  }
+}
+
+#product .info .price {
+  color: #fff;
+}
+
+#product .info .detail {
+  color: #fff;
+}
+
+#product2 .info .price {
+  color: #fff;
+}
+
+#product2 .info .detail {
+  color: #fff;
+}
+
+#product .info .head {
+  white-space: nowrap;
+}
+
 #product2 {
   padding: 135px 0 90px;
   position: relative;
@@ -755,6 +863,10 @@ picture {
   .recipe__more-btn:hover {
     opacity: 0.7;
   }
+}
+.recipe__more-btn img {
+  width: 14px;
+  height: 14px;
 }
 @media screen and (max-width: 768px) {
   .recipe__more-btn {
@@ -1734,6 +1846,7 @@ picture {
   font-feature-settings: normal;
   margin-top: 4rem !important;
   margin-bottom: 9rem !important;
+  letter-spacing: 0em;
 }
 @media screen and (max-width: 768px) {
   .product__description {
@@ -1746,7 +1859,7 @@ picture {
   .product--large:not(.product--no-media) .product__info-wrapper {
     width: 38.46% !important;
     max-width: 38.46% !important;
-    padding-left: 5rem !important;
+    padding-left: 6.5rem !important;
   }
   .product--large:not(.product--no-media) .product__media-wrapper {
     width: 61.538% !important;
@@ -1792,11 +1905,12 @@ picture {
 }
 
 .product-form__submit {
-  -webkit-clip-path: polygon(90% 0, 100% 40%, 100% 100%, 0 100%, 0 0);
-          clip-path: polygon(90% 0, 100% 40%, 100% 100%, 0 100%, 0 0);
+  -webkit-clip-path: polygon(92.8% 0, 100% 33%, 100% 100%, 0 100%, 0 0);
+          clip-path: polygon(92.8% 0, 100% 33%, 100% 100%, 0 100%, 0 0);
   position: relative;
   overflow: hidden;
   transition: all 0.3s ease;
+  height: 50px;
 }
 .product-form__submit span {
   transition: all 0.3s ease;
@@ -1812,9 +1926,10 @@ picture {
   width: calc(100% - 2px);
   height: calc(100% - 2px);
   background: #272727;
-  -webkit-clip-path: polygon(90% 0, 100% 40%, 100% 100%, 0 100%, 0 0);
-          clip-path: polygon(90% 0, 100% 40%, 100% 100%, 0 100%, 0 0);
+  -webkit-clip-path: polygon(92.8% 0, 100% 33%, 100% 100%, 0 100%, 0 0);
+          clip-path: polygon(92.8% 0, 100% 33%, 100% 100%, 0 100%, 0 0);
   opacity: 0;
+  transition: all 0.3s ease;
 }
 @media (hover: hover) {
   .product-form__submit:hover span {
@@ -1825,6 +1940,21 @@ picture {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .product__media-icon, .thumbnail__badge {
+    display: none !important;
+  }
+  .product-media-modal__toggle {
+    top: 7rem !important;
+  }
+  .product__media-list {
+    margin-bottom: 0 !important;
+  }
+  .slider-button {
+    height: 35px !important;
+    width: 30px !important;
+  }
+}
 @media screen and (min-width: 991px) {
   .product__title {
     margin-bottom: 4rem !important;
@@ -1839,9 +1969,20 @@ picture {
 @media screen and (max-width: 768px) {
   .product__title {
     margin-top: 5rem;
+    margin-bottom: 1rem !important;
+  }
+  .product__title h1 {
+    font-size: 2rem;
+  }
+  .product__price {
+    margin-top: 1rem !important;
+    margin-bottom: 3.6rem !important;
   }
   .product-form__input {
     margin-bottom: 5rem !important;
+  }
+  .price-per-item__container {
+    height: 4rem !important;
   }
 }
 .product__media-list {
@@ -1927,10 +2068,20 @@ body, .color-background-1, .color-background-2, .color-inverse, .color-accent-1,
     border-bottom: 1px solid #ababab !important;
   }
 }
-quantity-popover .quantity {
+.quantity {
   background: #272727 !important;
 }
+@media screen and (max-width: 768px) {
+  .quantity {
+    min-height: 4.2rem !important;
+  }
+}
 
+@media screen and (max-width: 768px) {
+  .quantity__input {
+    font-size: 1.4rem !important;
+  }
+}
 .cart-item__price-wrapper span {
   font-size: 3.2rem !important;
   color: #ababab !important;
