--- a/sections/custom-top.liquid
+++ b/sections/custom-top.liquid
@@ -64,8 +64,31 @@
           </picture>
         </div>
         <div class="info">
+          <p class="memo-main">
+            サトウキビからつくった59度のアルコールに<br class="for-pc"
+            >浸けて抽出し、香り高い13種類（または8種類）<br class="for-pc"
+            >のハーブ酒（泡盛ベース）と合わせたハブ酒。
+          </p>
           <div class="sp-flex justify-content-center flex">
-            <!-- <p class="head en">Price - Info</p> -->
+            <p class="head en for-sp">Price - Info</p>
+            <div class="flex-item">
+              <p class="price"><span class="en">¥4,400</span>(送料別)</p>
+              <p class="detail">
+                内容量 500ml<br>
+                アルコール度数 35度
+              </p>
+              <p class="memo">
+                これはお酒です。<br>
+                20歳未満の者の飲酒は法律で<br class="for-sp">禁止されています。
+              </p>
+            </div>
+          </div>
+          <p class="purchase_btn modal_btn" data-target="modal-04"><span>商品詳細をみる&emsp;&RightArrow;</span></p>
+        </div>
+
+        <!-- <div class="info">
+          <div class="sp-flex justify-content-center flex">
+            <p class="head en">Price - Info</p>
             <p class="memo">
               サトウキビからつくった59度のアルコールに<br class="for-pc"
               >浸けて抽出し、香り高い13種類（または8種類）<br class="for-pc"
@@ -85,7 +108,7 @@
             </div>
           </div>
           <p class="purchase_btn modal_btn" data-target="modal-03">商品詳細をみる →</p>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="product-bg">
@@ -120,7 +143,7 @@
           </picture>
         </div>
         <div class="info">
-          <p class="memo">
+          <p class="memo-main">
             サトウキビからつくった59度のアルコールに<br class="for-pc">
             浸けて抽出し、香り高い13種類（または8種類）<br class="for-pc">
             のハーブ酒（泡盛ベース）と合わせたハブ酒。
@@ -135,7 +158,7 @@
               </p>
             </div>
           </div>
-          <p class="purchase_btn modal_btn" data-target="modal-04">商品詳細をみる →</p>
+          <p class="purchase_btn modal_btn" data-target="modal-04"><span>商品詳細をみる&emsp;&RightArrow;</span></p>
         </div>
       </div>
     </div>
