--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -142,7 +142,7 @@
               </div>
             {%- when 'price' -%}
 
-                <div class="no-js-hidden" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
+                <div class="no-js-hidden product__price" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
                   {%- render 'price',
                     product: product,
                     use_variant: true,
