--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -28,13 +28,6 @@
     <div class="sns-icons animate__animated animate__fadeIn animate__delay-1s">
       <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
         <img src="{{ 'cart-icon.svg' | file_url }}" alt="カート" width="25">
-        <!-- {%- liquid
-          if cart == empty
-            render 'icon-cart-empty'
-          else
-            render 'icon-cart'
-          endif
-        -%} -->
         <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
         {%- if cart != empty -%}
           <div class="cart-count-bubble">
@@ -45,20 +38,6 @@
           </div>
         {%- endif -%}
       </a>
-      <!-- <a href="https://www.instagram.com/habush.jp/" target="_blank" rel="noopener noreferrer" class="ig-icon">
-        <img src="{{ 'ig-icon.svg' | file_url }}" alt="" width="25">
-      </a>
-      <a href="https://twitter.com/habush_jp" target="_blank" rel="noopener noreferrer" class="twitter-icon">
-        <img src="{{ 'twitter-icon.svg' | file_url }}" alt="" width="23">
-      </a>
-      <a
-        href="https://www.tiktok.com/@habush.jp?_t=8WzUnbnRayI&_r=1"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="tiktok-icon"
-      >
-        <img src="{{ 'tiktok-icon.svg' | file_url }}" alt="" width="18">
-      </a> -->
     </div>
     <div class="menu animate__animated animate__fadeIn animate__delay-1s">
       <span id="nav_toggle">
@@ -70,20 +49,20 @@
         {% if template == 'index' %}
         <ul>
           <li><a href="#product">PRODUCT</a></li>
-          <li><a href="#story-main">BRAND STORY</a></li>
+          <li><a href="#story">BRAND STORY</a></li>
           <li><a href="/pages/process">PROCESS</a></li>
           <li><a href="/pages/recipe">RECIPE</a></li>
           <li><a href="#sns">SNS</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <!-- <li><a href="#contact">CONTACT</a></li> -->
         </ul>
         {% else %}
         <ul>
           <li><a href="{{ shop.url }}#product">PRODUCT</a></li>
-          <li><a href="{{ shop.url }}#story-main">BRAND STORY</a></li>
+          <li><a href="{{ shop.url }}#story">BRAND STORY</a></li>
           <li><a href="/pages/process">PROCESS</a></li>
           <li><a href="/pages/recipe">RECIPE</a></li>
           <li><a href="{{ shop.url }}#sns">SNS</a></li>
-          <li><a href="{{ shop.url }}#contact">CONTACT</a></li>
+          <!-- <li><a href="{{ shop.url }}#contact">CONTACT</a></li> -->
         </ul>
         {% endif %}
       </nav>
