--- a/sections/custom-top.liquid
+++ b/sections/custom-top.liquid
@@ -124,7 +124,7 @@
     </div>
   </section>
 
-  <section id="product2">
+  <!-- <section id="product2">
     <div class="section-container">
       <div class="product-inner justify-content-between align-items-center wow animate__animated animate__fadeInUp">
         <h2 class="logo">
@@ -172,7 +172,7 @@
         >
       </picture>
     </div>
-  </section>
+  </section> -->
 
   <section id="story">
     <div class="story-entry">
