--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -88,7 +88,7 @@
         {% if template == 'index' %}
         <ul>
           <li><a href="#product">PRODUCT</a></li>
-          <li><a href="#story">BRAND STORY</a></li>
+          <li><a href="#story-main">BRAND STORY</a></li>
           <li><a href="/pages/process">PROCESS</a></li>
           <li><a href="/pages/recipe">RECIPE</a></li>
           <li><a href="#sns">SNS</a></li>
@@ -97,7 +97,7 @@
         {% else %}
         <ul>
           <li><a href="{{ shop.url }}#product">PRODUCT</a></li>
-          <li><a href="{{ shop.url }}#story">BRAND STORY</a></li>
+          <li><a href="{{ shop.url }}#story-main">BRAND STORY</a></li>
           <li><a href="/pages/process">PROCESS</a></li>
           <li><a href="/pages/recipe">RECIPE</a></li>
           <li><a href="{{ shop.url }}#sns">SNS</a></li>
