--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -24,6 +24,7 @@
           13 kinds of herbs
         </p>
       </div>
+
     </div>
     <div class="sns-icons animate__animated animate__fadeIn animate__delay-1s">
       <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
@@ -49,7 +50,7 @@
         {% if template == 'index' %}
         <ul>
           <li><a href="#product">PRODUCT</a></li>
-          <li><a href="#story">BRAND STORY</a></li>
+          <li><a href="#story-main">BRAND STORY</a></li>
           <li><a href="/pages/process">PROCESS</a></li>
           <li><a href="/pages/recipe">RECIPE</a></li>
           <li><a href="#sns">SNS</a></li>
@@ -58,7 +59,7 @@
         {% else %}
         <ul>
           <li><a href="{{ shop.url }}#product">PRODUCT</a></li>
-          <li><a href="{{ shop.url }}#story">BRAND STORY</a></li>
+          <li><a href="{{ shop.url }}#story-main">BRAND STORY</a></li>
           <li><a href="/pages/process">PROCESS</a></li>
           <li><a href="/pages/recipe">RECIPE</a></li>
           <li><a href="{{ shop.url }}#sns">SNS</a></li>
