--- a/sections/custom-top.liquid
+++ b/sections/custom-top.liquid
@@ -72,7 +72,20 @@
           <div class="sp-flex justify-content-center flex">
             <p class="head en for-sp">Price - Info</p>
             <div class="flex-item">
-              <p class="price"><span class="en">¥4,400</span>(送料別)</p>
+
+              <!-- <div class="no-js-hidden product__price" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
+                {%- render 'price',
+                  product: product,
+                  use_variant: true,
+                  show_badges: true,
+                  price_class: 'price--large'
+                -%}
+                {%- if cart.taxes_included -%}
+                <span class="product-tax-in">({{ 'products.product.include_taxes' | t }})</span>
+                {%- endif -%}
+              </div> -->
+
+              <p class="price"><span class="en">¥4,400</span>(税込)</p>
               <p class="detail">
                 内容量 500ml<br>
                 アルコール度数 35度
