--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -550,7 +550,7 @@
           <ul class="d-flex justify-content-center">
             <li class="yes_btn">
               <!-- <a href="https://awichmerch.thebase.in/items/69187993" class="en"> -->
-              <a href="/products/habush" class="en">
+              <a href="/cart/add?id=47170814214439&quantity=1" class="en">
                 <picture class="">
                   <source srcset="{{ 'yes_btn.svg' | file_url }}" media="(min-width: 768px)">
                   <img src="{{ 'yes_btn_sp.svg' | file_url }}" alt="Yes">
