--- a/assets/add.scss
+++ b/assets/add.scss
@@ -426,7 +426,6 @@ gap: 20px 40px;
         white-space: nowrap;
     }
 }
-
 @include mq(sp) {
     #product .info .price {
         width: 90px;
@@ -437,6 +436,7 @@ gap: 20px 40px;
     display: block;
     white-space: nowrap;
     width: 50px;
+    font-size: 14px;
     @include mq(sp) {
         font-size: 12px;
         @media screen and (max-width: 487px) {
